--- a/JZCourier/app/src/main/res/layout/activity_drive.xml
+++ b/JZCourier/app/src/main/res/layout/activity_drive.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.lithamguzuli.jzcourier.MainActivity"
-    android:background="@drawable/image">
-
+    tools:context="com.example.lithamguzuli.jzcourier.DriveActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -22,7 +20,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_drive" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
