--- a/JZCourier/app/src/main/res/layout/activity_sign_in.xml
+++ b/JZCourier/app/src/main/res/layout/activity_sign_in.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.lithamguzuli.jzcourier.SignInActivity">
+    tools:context="com.example.lithamguzuli.jzcourier.SignInActivity"
+    android:background="@drawable/image">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
