--- a/JZCourier/app/src/main/res/layout/content_about_ao.xml
+++ b/JZCourier/app/src/main/res/layout/content_about_ao.xml
@@ -4,13 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.lithamguzuli.jzcourier.ConfirmationActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.example.lithamguzuli.jzcourier.AboutAO"
+    tools:showIn="@layout/activity_about_ao">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="394dp"
-        android:layout_height="510dp"
-        app:srcCompat="@drawable/conf"
-        tools:layout_editor_absoluteX="-9dp"
-        tools:layout_editor_absoluteY="0dp" />
 </android.support.constraint.ConstraintLayout>
